@@ -5,7 +5,9 @@
   * Support for "DB_ENV->memp_trickle()", "DB_ENV->get_lg_bsize()",
     "DB_ENV->get_lg_dir()", "DB_ENV->get_lg_filemode()",
     "DB_ENV->set_lg_filemode()", "DB_ENV->get_lk_detect()",
-    "DB_ENV->get_lg_regionmax()", "DB_ENV->get_lk_max_lockers()" functions.
+    "DB_ENV->get_lg_regionmax()", "DB_ENV->get_lk_max_lockers()", 
+    "DB_ENV->set_lk_max_locks()",
+    functions.
 
 4.8.1:
   * Support for "DB_ENV->mutex_set_align()" and
